# belle_cuda

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: basic_arithmetic.cuh  benchmark.cuh  cuda_export_headers.h  cuda_macros.h  cuda_structs.cuh  cuda_structs.h  ell_point.cuh  mont_mul.cuh  mont_mul_final.cuh  mul_128_to_256.cuh  mul_256_to_512.cuh  mulexp.cuh  square_256_to_512.cuh
sources/: CMakeLists.txt  CUDA_init.cu  FFT.cu  Groth16_prover.cu  basic_arithmetic.cu  constants.cu  cuda_exports.cu  device_info.cu  ecc_exp.cu  ell_point.cu  experiemental.cu  finitefield.cu  host_funcs.cpp  kernels.cu  main.cu  mont_mul.cu  mul_128_to_256.cu  mul_256_to_512.cu  multiexp.cu  shuffle_ptx.cu  square_256_to_512.cu  test_framework.cu  trash.cu
utilities/: CIOS_MONT-mul.py  asm_generator.py  check_CUDA_arch.cu  check_arithmetic.py  mont_asm_generator.py  mul_with_shuffle_generator.py  root_of_unity_generator.py  test_DFT.py  test_framework.py  test_multiexp_framework.py
